CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-15 23:18:52
+lastsearch = 2024-07-16 01:21:58
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -65.2%%
-title = National Geographic Collegiate Atlas of the World
-url = https://books.google.com/books?id=gMaha-3d6voC&pg=PA367&lpg=PA367&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=E7Ojwmt-6M&sig=ACfU3U1bvdGxOQGNnVyNFjClZP9EOxGlZw&hl=en&sa=X&ved=2ahUKEwiz_fGtuamHAxXMrokEHaHpB34Q6AF6BAggEAM
+match = -69.6%%
+title = The International Relations of the Chineese Empire
+url = https://books.google.com/books?id=uV4dFxHP2ioC&pg=PT1&lpg=PT1&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TMtX_wX6yU&sig=ACfU3U0MIM2sLdWVRCWRJ5R5BBBhyxVk_A&hl=en&sa=X&ved=2ahUKEwj574_w1KmHAxWpvokEHVuiCHwQ6AF6BAgiEAM
 
 [www.travelweekly.com]
 match = -87.0%%
