--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-16 00:35:39
+lastsearch = 2024-07-16 01:25:25
 
 [helloviettravel.com]
 match = -50.0%%
@@ -27,14 +27,14 @@ title = Du lịch Việt Nam - 18/5/2024 - Video đã phát trên VTV1
 url = https://vtv.vn/video/du-lich-viet-nam-18-5-2024-676711.htm
 
 [www.facebook.com]
-match = -12.5%%
-title = Du Lịch USA và Thế Giới
-url = https://www.facebook.com/groups/dulichusavathegioi/
+match = -181.2%%
+title = ‍♂️‍♀️Khám phá Khu trải nghiệm 18 tầng địa ngục tại Điểm ...
+url = https://www.facebook.com/quangninhgate/videos/️️khám-phá-khu-trải-nghiệm-18-tầng-địa-ngục-tại-điểm-du-lịch-quảng-ninh-gatekhu-/440182313402897/
 
 [vinpearl.com]
-match = -156.2%%
-title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
-url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
+match = -193.8%%
+title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
+url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -193.8%%
-title = Khám phá 18 Tầng địa ngục tại Làng du lịch Mỹ Khánh Cần Thơ
-url = https://www.youtube.com/watch?v=ql7G7p6JNJE
+match = -218.8%%
+title = Khám phá Làng du lịch Mỹ Khánh (Cần Thơ) - Tập 3: Đại náo ...
+url = https://www.youtube.com/watch?v=esnw2jXy9g0
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -87,9 +87,9 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -150.0%%
-title = 15 Địa Điểm Du Lịch New York Nổi Tiếng Bạn Sẽ Thích
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-new-york/
+match = -168.8%%
+title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
+url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
 
 [dulichviet.com.vn]
 match = -206.2%%
