--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-16 00:50:53
+lastsearch = 2024-07-16 01:25:14
 
 [anlacphat.com]
 match = -118.8%%
@@ -12,9 +12,9 @@ title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
 url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
 
 [thacoanlac.vn]
-match = -180.0%%
-title = FD990
-url = https://thacoanlac.vn/forland-fd900
+match = -55.6%%
+title = FD990-4WD
+url = https://thacoanlac.vn/forland-fd990-4wd
 
 [vietnamese.alibaba.com]
 match = -256.2%%
