--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-16 00:43:58
+lastsearch = 2024-07-16 01:23:38
 
 [shopee.vn]
-match = -57.1%%
-title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
-url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
+match = -100.0%%
+title = Thảm trải sàn cỡ lớn trang trí phòng khách giường ngủ ...
+url = https://shopee.vn/Thảm-trải-sàn-cỡ-lớn-trang-trí-phòng-khách-giường-ngủ-hình-Chữ-nhật-200x85cm-mã-27023-i.18636247.14233410138
 
 [khosibaclieu.com]
 match = -9.5%%
