--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-15 15:39:22
+lastsearch = 2024-07-16 01:17:22
 
 [gobearcats.com]
 match = -142.1%%
@@ -480,4 +480,9 @@ url = https://courtlists.fcfcoa.gov.au/wps/wcm/connect/fcfcoa/court-lists-and-ci
 match = -14.3%%
 title = Table of cases
 url = https://www.judcom.nsw.gov.au/publications/benchbks/sentencing/table_of_cases.html
+
+[ktla.com]
+match = 0.0%%
+title = 
+url = https://ktla.com/news/california/4-southern-california-high-schoolers-named-2024-presidential-scholars/
 
