CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-16 00:30:49
+lastsearch = 2024-07-16 01:36:09
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
 match = -230.8%%
@@ -22,9 +22,9 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Coco_Chanel
+match = 8.3%%
+title = Run Papa Run
+url = https://en.wikipedia.org/wiki/Run_Papa_Run
 
 [www.sassymamahk.com]
 match = -246.2%%
@@ -47,9 +47,9 @@ title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
-match = -200.0%%
-title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
-url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
+match = -330.8%%
+title = Awesome day trip! - Review of Tuff E Nuff Tours, San Pedro ...
+url = https://www.tripadvisor.com/ShowUserReviews-g291962-d2014096-r465323397-Tuff_E_Nuff_Tours-San_Pedro_Ambergris_Caye_Belize_Cayes.html
 
 [jovelchan.com]
 match = -238.5%%
@@ -145,4 +145,9 @@ url = https://arxiv.org/html/2404.08506v1
 match = -223.1%%
 title = Buena Vista Social Club - Chan Chan (Official Audio)
 url = https://www.youtube.com/watch?v=o5cELP06Mik
+
+[openaccess.thecvf.com]
+match = -284.6%%
+title = Parameter-Efficient Low Rank Adapter for Dense Predictions
+url = https://openaccess.thecvf.com/content/CVPR2023/papers/Yin_1_VS_100_Parameter-Efficient_Low_Rank_Adapter_for_Dense_Predictions_CVPR_2023_paper.pdf
 
