--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-15 17:21:12
+lastsearch = 2024-07-16 01:41:07
 
 [www.everonqb.com]
 match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm ESM20013 80x100
-url = https://www.everonqb.com/vo-goi-om-esm20013-80x100.html
+title = Everon Quảng Bình Vỏ gối ôm EPC19055 80x100
+url = https://www.everonqb.com/vo-goi-om-epc19055-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -50,4 +50,14 @@ url = https://github.com/charmbracelet/lipgloss/issues/55
 match = -108.7%%
 title = ATV thumbs up! - Review of Otium International, Punta ...
 url = https://www.tripadvisor.com/ShowUserReviews-g147293-d10021648-r950330283-Otium_International-Punta_Cana_La_Altagracia_Province_Dominican_Republic.html
+
+[magicthreads.wordpress.com]
+match = -139.1%%
+title = Part 3: The limestone islands: West Timor, Savu, Raijua, Sumba
+url = https://magicthreads.wordpress.com/textile-tours-and-research/part-3-the-limestone-islands-west-timor-savu-raijua-sumba/
+
+[twitter.com]
+match = -104.3%%
+title = O. E. A. is Blessed 🙏 on X: "@Omojuwa very correct" / X
+url = https://twitter.com/0Olayemi/status/973229533334786048
 
