--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-15 20:01:01
+lastsearch = 2024-07-16 01:40:45
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Bộ ga chun chần
 url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = 3.6%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [demxanh.com]
 match = -32.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn bốn mùa
 url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan-bon-mua/
 
 [everonvn.com.vn]
-match = -32.1%%
-title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
-url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
+match = 10.7%%
+title = Bảng giá bán lẻ chăn bốn mùa Everon
+url = https://everonvn.com.vn/51/chan-bon-mua-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
