--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-16 00:18:37
+lastsearch = 2024-07-16 01:37:25
 
 [shopee.vn]
 match = 25.0%%
@@ -195,4 +195,9 @@ url = https://www.pharmacity.vn/bang-chieu-cao-can-nang-cua-tre-tu-0-10-tuoi-chu
 match = -193.8%%
 title = Chứng khoán 12/7: Thị trường “rung lắc”, bất ngờ một cổ ...
 url = https://thitruongtaichinh.kinhtedothi.vn/chung-khoan/chung-khoan-127-thi-truong-rung-lac-bat-ngo-mot-co-phieu-duoc-pham-lien-tuc-vuot-dinh-124060.html
+
+[baodaknong.vn]
+match = -218.8%%
+title = Cây lác (cây cói): Ý nghĩa, hình ảnh, cách trồng, chăm sóc ...
+url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc-tai-nha-171408.html
 
