--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-16 00:51:35
+lastsearch = 2024-07-16 01:39:53
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -130.0%%
-title = Season 2021 Opening Day | Full Livestream - League of ...
-url = https://www.youtube.com/watch?v=rnFRcjzhTzE
+match = -140.0%%
+title = Billy Joel - We Didn't Start the Fire (Official HD Video)
+url = https://www.youtube.com/watch?v=eFTLKWw542g
 
 [som.yale.edu]
 match = -110.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -100.0%%
-title = A Ceo Fakes Being A Ceo Eepisode 100 Full Episode
-url = https://www.tiktok.com/discover/a-ceo-fakes-being-a-ceo-eepisode-100-full-episode
+match = -145.0%%
+title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
+url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
 
 [www.imdb.com]
 match = 0.0%%
@@ -268,8 +268,8 @@ url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furiou
 
 [en.yna.co.kr]
 match = -160.0%%
-title = S. Korean vice foreign minister holds bilateral meetings at ...
-url = https://en.yna.co.kr/view/AEN20171121002500315
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
