--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-15 18:46:36
+lastsearch = 2024-07-16 01:35:49
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -10.0%%
+title = Donghak Peasant Revolution
+url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -227,9 +227,9 @@ title = SSD prices could steady or even drop as NAND chip ...
 url = https://www.pcgamer.com/hardware/storage/ssd-prices-set-to-tumble-as-nand-chip-makers-boost-production/
 
 [www.youtube.com]
-match = -155.0%%
-title = Korean Pronunciation Guide - 네 (NE or DE?) & 뭐 (MWO or ...
-url = https://www.youtube.com/watch?v=zhf9NWKHjqE
+match = -135.0%%
+title = Inside The "North Korea" of Africa 🇪🇷: How It Really Is (#174)
+url = https://www.youtube.com/watch?v=lAHumbL12Z8
 
 [carnegieendowment.org]
 match = -90.0%%
