CI images update

--- a/images/tui-warmdream-2gap-12f-18-2m/config.ini
+++ b/images/tui-warmdream-2gap-12f-18-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-2gap-12f-18-2m.html
 lastopen = 2024-06-10 00:25:02
 
 [search]
-lastsearch = 2024-07-15 23:40:24
+lastsearch = 2024-07-16 01:49:19
 
 [www.stevemeadedesigns.com]
 match = -50.0%%
@@ -24,12 +24,12 @@ url = https://unofficialwarmoth.com/threads/really-frfr.26533/page-2
 [www.amazon.com]
 match = -28.6%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B013AVGOQE
+url = https://www.amazon.com/ask/questions/Tx14C2FLBA8H5RI/?
 
 [www.head-fi.org]
 match = -28.6%%
-title = Woo WA2 Tube Rolling Recommendations | Page 75
-url = https://www.head-fi.org/threads/woo-wa2-tube-rolling-recommendations.393811/page-75
+title = Woo WA2 Tube Rolling Recommendations | Page 71
+url = https://www.head-fi.org/threads/woo-wa2-tube-rolling-recommendations.393811/page-71
 
 [www.nwhikers.net]
 match = -46.4%%
