--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-16 00:36:55
+lastsearch = 2024-07-16 01:52:37
 
 [demxanh.com]
-match = -135.3%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 64.7%%
+title = Chiếu trúc hạt đen
+url = https://demxanh.com/chieu-truc-hat-den-ha-noi.html
 
 [dem24h.vn]
 match = -29.4%%
@@ -80,4 +80,9 @@ url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 match = -17.6%%
 title = Chiếu Trúc Lan Lan Có Viền Màu Đen
 url = https://khonemthangloi.com/san-pham/chieu-truc-lan-lan-co-vien-mau-den/
+
+[tongkhonem.com]
+match = 35.3%%
+title = Chiếu trúc hạt đen có viền
+url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
