--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-16 00:18:48
+lastsearch = 2024-07-16 01:46:17
 
 [shopee.vn]
 match = -171.4%%
@@ -17,9 +17,9 @@ title = 1.6M x 2M | Mùng Ngủ Tự Bung Dành Cho 2-4 Người (Đỏ ...
 url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/1-6m-x-2m-mung-ngu-tu-bung-danh-cho-2-4-nguoi-do-do-mngu-1m6-2m-chinh-hang.html
 
 [tiki.vn]
-match = -207.1%%
-title = Màm tự bung em bé 80cm x 180cm hàng chính hãng, giao ...
-url = https://tiki.vn/search?q=màm tự bung em bé 80cm x 180cm
+match = -221.4%%
+title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [manthutrang.com]
 match = -200.0%%
