--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-15 21:19:10
+lastsearch = 2024-07-16 02:15:21
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -218.8%%
-title = [2 HOUR] TAM BÔI LY BIỆT REMIX || CẦN VINH x LEE KEN x ...
-url = https://www.youtube.com/watch?v=Jt_x9hRoBlo
+match = -168.8%%
+title = HOÀNG HÔN THÁNG TÁM - ĐÔNG HÙNG ft. KRAZINOYZE ...
+url = https://www.youtube.com/watch?v=R-X7h5VkcU4
 
 [saigontourist.edu.vn]
 match = -162.5%%
