--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-15 23:20:42
+lastsearch = 2024-07-16 02:24:38
 
 [chieutrelanlan.com]
-match = -16.7%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
+match = -41.7%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [kyoryo.vn]
 match = -54.2%%
@@ -57,9 +57,9 @@ title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
 url = https://www.facebook.com/chieutregiare/?locale=vi_VN
 
 [chieutrucsaigon.com]
-match = 8.3%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = 12.5%%
+title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
 
 [www.xskthcm.com]
 match = -83.3%%
