--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-16 00:35:51
+lastsearch = 2024-07-16 02:44:40
 
 [tiki.vn]
 match = -138.9%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -188.9%%
-title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
+match = -183.3%%
+title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
