--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-16 00:16:48
+lastsearch = 2024-07-16 03:14:33
 
 [www.instagram.com]
 match = -30.8%%
@@ -117,8 +117,8 @@ title = Team
 url = https://www.5plusdesign.com/team
 
 [www.scmp.com]
-match = -300.0%%
-title = Meet the HKU graduate making vegan treats to promote a ...
+match = -223.1%%
+title = Meet the HKU graduate making vegan treats to ...
 url = https://www.scmp.com/yp/discover/news/hong-kong/article/3057691/meet-hku-graduate-making-vegan-treats-promote-plant
 
 [mutualpublishing.com]
