--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-16 01:25:43
+lastsearch = 2024-07-16 03:14:21
 
 [www.muji.com]
 match = 7.1%%
@@ -47,9 +47,9 @@ title = Chăn lông cừu Muji thương hiệu số 1 Nhật Bản - Coda
 url = https://coda.io/@hoang-quang-tuyen/chan-long-cuu-muji-thuong-hieu-so-1-nhat-ban
 
 [shopee.vn]
-match = -135.7%%
-title = CHĂN LÔNG TUYẾT MUJI XUẤT NHẬT SIÊU MỀM MỊN ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-MUJI-XUẤT-NHẬT-SIÊU-MỀM-MỊN-KÍCH-THƯỚC-2M*2M3-i.207051295.4759765140
+match = 28.6%%
+title = Chăn Lông Nhung Xám MUJI
+url = https://shopee.vn/Chăn-Lông-Nhung-Xám-MUJI-i.601622525.12174454922
 
 [changagoidemdep.vn]
 match = 35.7%%
@@ -102,12 +102,17 @@ title = Chăn Lông Muji
 url = https://www.tiktok.com/discover/Chăn-lông-muji
 
 [www.lazada.vn]
-match = -62.5%%
-title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+match = -85.7%%
+title = Mền Lông Tuyết Muji Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/men-long-tuyet-muji/
 
 [sugoimart.com]
 match = -257.1%%
 title = Japanese Online Store - Sugoi Mart – Sugoi Mart by Japan ...
 url = https://sugoimart.com/
+
+[www.japantimes.co.jp]
+match = 0.0%%
+title = 
+url = https://www.japantimes.co.jp/news/2022/10/28/business/corporate-business/muji-new-shops/
 
