--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-07-16 02:16:33
+lastsearch = 2024-07-16 03:15:30
 
 [bellizeno.com]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Gối-vuông-trang-trí-gối-sofa-đơn-giản-(có-kè
 [happynest.vn]
 match = -43.3%%
 title = Gối Vuông Trang Trí, Gối Sofa Đơn Giản Có Kèm Ruột Gối ...
-url = https://happynest.vn/shop/0902002406/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-tropical-6.html
+url = https://happynest.vn/shop/0902001713/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-piece-13.html
 
 [sieuthicholon.com]
 match = -30.0%%
@@ -90,4 +90,9 @@ url = https://www.talkbass.com/threads/la-bella-original-1954s.1304386/
 match = -56.7%%
 title = Inspiration # 5, A Retainer from Gnezdovo - Projekt Forlǫg
 url = https://sagy.vikingove.cz/en/inspiration-5-a-retainer-from-gnezdovo/
+
+[www.youtube.com]
+match = -30.0%%
+title = CLOVE HITCH Nodo parlato la paolina isola d'elba
+url = https://www.youtube.com/watch?v=pRGiR2-ZWLY
 
