--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-16 00:16:04
+lastsearch = 2024-07-16 03:19:37
 
 [tuananh.vn]
 match = 12.0%%
@@ -27,9 +27,9 @@ title = [Cập nhật] Bảng giá đệm Tuấn Anh mới nhất 2021
 url = https://changagoidemsonghong.online/cap-nhat-bang-gia-dem-tuan-anh-moi-nhat-2020.html
 
 [entershopping.vn]
-match = -20.0%%
-title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
-url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
+match = -36.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
+url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
 match = -24.0%%
@@ -92,7 +92,7 @@ title = Đệm bông ép Tuấn Anh chính hãng, giá tốt nhất
 url = https://thegioidemonline.com/dem-bong-ep-tuan-anh.html
 
 [dem24h.vn]
-match = 12.0%%
-title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
-url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
+match = -8.0%%
+title = Đệm Bông Ép Bề Mặt Masage Korea Plus
+url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
 
