CI images update

--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-16 02:27:01
+lastsearch = 2024-07-16 03:30:59
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -195,4 +195,9 @@ url = http://thienphuoc.com/shop_news.php?l=vn&ac=13&mode=n&cn=359&n=7481&item=4
 match = -39.3%%
 title = Thư Mời Tiệc Chay Văn Nghệ Gây Quỹ Tu Bổ Chùa Phật Đà
 url = https://hoavouu.com/p14a43298/6/thu-moi-tiec-chay-van-nghe-gay-quy-tu-bo-chua-phat-da
+
+[benhviennhitrunguong.gov.vn]
+match = 17.9%%
+title = Khoa Hồi sức Cấp cứu Sơ sinh
+url = https://benhviennhitrunguong.gov.vn/co-cau-to-chuc-benh-vien-nhi-trung-uong/khoa-hoi-suc-cap-cuu-so-sinh
 
