--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-16 00:18:59
+lastsearch = 2024-07-16 03:32:59
 
 [burningman.org]
 match = 0.0%%
@@ -737,8 +737,8 @@ title = Pages on the App Store - Apple
 url = https://apps.apple.com/us/app/pages/id361309726
 
 [store.steampowered.com]
-match = -86.7%%
-title = Save 60%% on Twelve Minutes on Steam
+match = -26.7%%
+title = Twelve Minutes on Steam
 url = https://store.steampowered.com/app/1097200/Twelve_Minutes/
 
 [www.delfriscos.com]
@@ -817,9 +817,9 @@ title = Alameda County Sheriff's Office, CA | Home
 url = https://www.alamedacountysheriff.org/
 
 [www.sos.state.mn.us]
-match = -166.7%%
-title = Minnesota Secretary Of State - Vote early by mail
-url = https://www.sos.state.mn.us/elections-voting/other-ways-to-vote/vote-early-by-mail/
+match = -153.3%%
+title = Minnesota Secretary Of State - Register To Vote
+url = https://www.sos.state.mn.us/elections-voting/register-to-vote/
 
 [www.nih.gov]
 match = -260.0%%
