--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-07-16 03:15:30
+lastsearch = 2024-07-16 03:35:13
 
 [bellizeno.com]
 match = -14.3%%
@@ -95,4 +95,24 @@ url = https://sagy.vikingove.cz/en/inspiration-5-a-retainer-from-gnezdovo/
 match = -30.0%%
 title = CLOVE HITCH Nodo parlato la paolina isola d'elba
 url = https://www.youtube.com/watch?v=pRGiR2-ZWLY
+
+[forums.vintagefashionguild.org]
+match = -36.7%%
+title = dating Gloverall Snowdon cord duffle..... 80s? 70s?
+url = https://forums.vintagefashionguild.org/threads/dating-gloverall-snowdon-cord-duffle-80s-70s.55040/
+
+[m.yelp.com]
+match = 0.0%%
+title = Best Hats near Donzella, Rovigo, Italy
+url = https://m.yelp.com/search?find_desc=Hats&find_loc=Donzella,+Rovigo/
+
+[www.tripadvisor.in]
+match = -50.0%%
+title = Puerta Del Norte - All You Need to Know BEFORE You Go ...
+url = https://www.tripadvisor.in/Attraction_Review-g2079010-d4444216-Reviews-Puerta_Del_Norte-Bello_Antioquia_Department.html
+
+[www.tripadvisor.com.sg]
+match = -6.7%%
+title = Gift & Speciality Shops in Alberobello
+url = https://www.tripadvisor.com.sg/Attractions-g580227-Activities-c26-t144-Alberobello_Province_of_Bari_Puglia.html
 
