--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-16 00:19:33
+lastsearch = 2024-07-16 03:36:29
 
 [demxanh.com]
 match = -42.9%%
@@ -122,9 +122,9 @@ title = Texas high school stadiums in texas [eXEy1G]
 url = https://www.semex.com/popurl.cgi?url=https://xn----8sbbfekaevffmq4adcddba4axaci5q.xn--p1ai/1829654fe4fe43y
 
 [61.7.230.236]
-match = -10.7%%
-title = ulibm: แสดงเนื้อหาอิเล็กทรอนิกส์
-url = http://61.7.230.236/ULIBM//dublin.linkout.php?url=https://torgi-space.ru/2574981wwwy1ty65kmcomze5fe43y
+match = 3.6%%
+title = Blanche neige et la pomme [OGdnA3]
+url = http://61.7.230.236/ULIBM//dublin.linkout.php?url=https://transfer-24.ru/49761852moyanwxcomv4fe36a
 
 [www.24hgold.com]
 match = -14.3%%
