CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-16 03:31:10
+lastsearch = 2024-07-16 03:51:15
 
 [www.facebook.com]
 match = -141.2%%
@@ -225,4 +225,9 @@ url = https://chinese.yabla.com/chinese-english-pinyin-dictionary.php?define=mao
 match = -111.8%%
 title = Global Carbon Budget 2022 - ESSD Copernicus
 url = https://essd.copernicus.org/articles/14/4811/2022/
+
+[amerijet.com]
+match = -170.6%%
+title = Amerijet: Shipping Company | Air Freight | Cargo Shipping
+url = https://amerijet.com/
 
