--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-16 01:36:09
+lastsearch = 2024-07-16 03:51:26
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -230.8%%
@@ -22,9 +22,9 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = 8.3%%
-title = Run Papa Run
-url = https://en.wikipedia.org/wiki/Run_Papa_Run
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Coco_Chanel
 
 [www.sassymamahk.com]
 match = -246.2%%
@@ -44,12 +44,12 @@ url = https://admissions.hku.hk/hkuer
 [www.alamy.com]
 match = -246.2%%
 title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
-url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
+url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-cross-year-activity-in-hong-kong-china-31-december-2018-image261310010.html
 
 [www.tripadvisor.com]
-match = -330.8%%
-title = Awesome day trip! - Review of Tuff E Nuff Tours, San Pedro ...
-url = https://www.tripadvisor.com/ShowUserReviews-g291962-d2014096-r465323397-Tuff_E_Nuff_Tours-San_Pedro_Ambergris_Caye_Belize_Cayes.html
+match = -200.0%%
+title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
+url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
 match = -238.5%%
