--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-16 03:29:15
+lastsearch = 2024-07-16 03:53:03
 
 [www.galottery.com]
 match = -7.7%%
@@ -12,8 +12,8 @@ title = Fantasy 5 - Games
 url = https://www.galottery.com/en-us/games/draw-games/fantasy-five.html
 
 [www.instagram.com]
-match = -138.5%%
-title = 𝐔𝐬𝐦𝐚𝐧 𝐆𝐚𝐧𝐢 (@theusman.gani) - Instagram
+match = -53.8%%
+title = 𝐔𝐬𝐦𝐚𝐧 𝐆𝐚𝐧𝐢 (@theusman.gani)
 url = https://www.instagram.com/theusman.gani/
 
 [www.homedepot.com]
@@ -67,9 +67,9 @@ title = GS Power 14 AWG (True American Wire Gauge) CCA ...
 url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
 
 [www.youtube.com]
-match = -230.8%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -215.4%%
+title = Tayo S5 EP14 l Thanks, Gani l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=UBbUr4PkwO4
 
 [tayothelittlebus.fandom.com]
 match = -215.4%%
