--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-16 03:20:31
+lastsearch = 2024-07-16 03:53:14
 
 [shopee.vn]
-match = 33.3%%
-title = Thảm 2,2m trải giường
-url = https://shopee.vn/Thảm-2-2m-trải-giường-i.2248373.772633100
+match = -52.4%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [www.lazada.vn]
 match = -76.2%%
