--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-16 01:45:44
+lastsearch = 2024-07-16 03:52:41
 
 [xoptraisan.info]
 match = -147.1%%
@@ -52,9 +52,9 @@ title = Keo xịt dán xốp dán tường, giấy, thảm nỉ, thảm simili, 
 url = https://ahamart.com.vn/keo-xit-dan-xop-dan-tuong-giay-tham-ni-tham-simili-vai-go-mut-cach-am-yuan-feng-sponge-spray-adhesive-pj77-600ml-p39099706.html
 
 [chuyenhangviet.com]
-match = -82.4%%
-title = Thảm nỉ ghép cao cấp Tường Lâm mọi kích thước
-url = https://chuyenhangviet.com/tham-ni-ghep-cao-cap-tuong-lam/
+match = -182.4%%
+title = Thảm nỉ ghép không răng đế cao su thương hiệu Âu Lạc Việt ...
+url = https://chuyenhangviet.com/tham-ni-de-cao-su-au-lac/
 
 [www.innhatkhang.com]
 match = 0.0%%
