--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-16 02:24:49
+lastsearch = 2024-07-16 04:52:27
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Bộ ga gối chun chan happy 16
 url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 
 [www.facebook.com]
-match = 7.7%%
-title = Happiness Việt Nam | Hanoi
+match = -27.8%%
+title = Happiness Việt Nam
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -21.4%%
-title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ ga chun poly
+match = 42.9%%
+title = Bộ ga gối thun 3D hàn quốc Chó Happy
+url = https://shopee.vn/Bộ-ga-gối-thun-3D-hàn-quốc-Chó-Happy-i.25746013.18261378023
 
 [chandem.com.vn]
 match = 17.9%%
