--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-16 00:52:04
+lastsearch = 2024-07-16 04:45:35
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfiNIuk9&sig=ACfU3U0DGnU1YPztd5UpTTph0vK4za4qBQ&hl=en&sa=X&ved=2ahUKEwj4qq2YzqmHAxUOMVkFHbq5AxwQ6AF6BAgVEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfiOMula&sig=ACfU3U0IQnEXJW4ZRN3QarVHY4F4hJYfBQ&hl=en&sa=X&ved=2ahUKEwjlmKqxgqqHAxW3kIkEHZPHD3kQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
