--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-07-16 03:30:30
+lastsearch = 2024-07-16 05:38:06
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/nem-bong/tui-nem.html
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx1GZ5EJCU0MQZ/
+url = https://www.amazon.com/ask/questions/Tx3SH8XTL5LR797/
 
 [m.facebook.com]
 match = -50.0%%
@@ -40,4 +40,9 @@ url = https://www.garagejournal.com/forum/threads/long-flex-double-head-ratcheti
 match = -87.5%%
 title = Looking for a new family tent. Help please. | Page 3
 url = https://expeditionportal.com/forum/threads/looking-for-a-new-family-tent-help-please.82191/page-3
+
+[vwcaliforniaclub.com]
+match = -41.7%%
+title = Duvalay as replacement for upper mattress
+url = https://vwcaliforniaclub.com/threads/duvalay-as-replacement-for-upper-mattress.35988/
 
