--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-16 03:47:48
+lastsearch = 2024-07-16 05:37:12
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -33.3%%
-title = bộ vỏ chăn ga gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga gối
+match = -62.5%%
+title = mẫu chăn ga gối đệm đẹp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=mẫu chăn ga gối đệm đẹp
 
 [demxanh.com]
 match = -8.3%%
