--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-16 04:34:33
+lastsearch = 2024-07-16 05:33:55
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5wvIz81&sig=ACfU3U3gSVF09XfgRRRYyVXY2COkvbm1TQ&hl=en&sa=X&ved=2ahUKEwjgrP71_6mHAxVyz8kDHdQaDQsQ6AF6BAgqEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmOCu30K&sig=ACfU3U3UNZYwVGcAaGEM9ZswYkU_djpChA&hl=en&sa=X&ved=2ahUKEwj83cmYjaqHAxUEjYkEHbGTDH0Q6AF6BAg2EAM
 
 [tax.vermont.gov]
 match = -29.4%%
