CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-16 03:51:15
+lastsearch = 2024-07-16 05:47:21
 
 [www.facebook.com]
 match = -141.2%%
@@ -149,7 +149,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 [books.google.com]
 match = -7.7%%
 title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqckVxrB&sig=ACfU3U1f_Y8k7K0Ffk6qgj5aYOQsD-YOnA&hl=en&sa=X&ved=2ahUKEwjk4L3g8amHAxWwhIkEHX6WCHoQ6AF6BAgnEAM
+url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqclTzoC&sig=ACfU3U2cjfdg1aTZRMdPfhBh_BdJQkRMlA&hl=en&sa=X&ved=2ahUKEwiNntyYkKqHAxVuCjQIHcCDBEUQ6AF6BAgoEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
