--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-15 20:38:16
+lastsearch = 2024-07-16 05:44:25
 
 [everon.online]
 match = -12.0%%
@@ -48,8 +48,8 @@ url = https://tuoitre.vn/an-do-xay-tuong-cao-nhat-the-gioi-577749.htm
 
 [batdongsan.com.vn]
 match = -64.0%%
-title = Mua bán căn hộ chung cư tại Xã Phú Tân, Thành phố Sóc ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-xa-phu-tan/gia-thuong-luong-dt-tu-150m2-den-200m2-2pn
+title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
+url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
 match = -80.0%%
@@ -153,8 +153,8 @@ url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-ch
 
 [m.facebook.com]
 match = -44.0%%
-title = Em có căn hộ 3PN-2WC ở tòa Goldmark City ( ...
-url = https://m.facebook.com/groups/113376572654593/posts/1439434073382163/
+title = E có hai giường này m6.2m muốn thanh lý 2triệu /2c
+url = https://m.facebook.com/groups/802016720598564/posts/1637312533735641/
 
 [dantri.com.vn]
 match = -60.0%%
