--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-16 03:50:19
+lastsearch = 2024-07-16 05:50:22
 
 [shopee.vn]
 match = -14.8%%
@@ -160,4 +160,9 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 match = 36.4%%
 title = Chăn lông tuyết cho bé
 url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
+
+[demxanh.com]
+match = -18.5%%
+title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
