--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-16 04:16:47
+lastsearch = 2024-07-16 05:51:56
 
 [demxanh.com]
-match = 38.2%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 14.7%%
+title = Chiếu điều hòa tencel - Chiếu cao su non có mát không?
+url = https://demxanh.com/chieu-dieu-hoa-tencel-chieu-cao-su-non-co-mat-khong.html
 
 [shopee.vn]
-match = 26.5%%
-title = CHIỀU ĐIỀU HOÀ CAO SU NON COCO TẶNG KÈM 2 VỎ ...
-url = https://shopee.vn/CHIỀU-ĐIỀU-HOÀ-CAO-SU-NON-COCO-TẶNG-KÈM-2-VỎ-GỐI-ĐẦU-(-HÀNG-NHẬP-KHẨU-CAO-CẤP-)-i.426167051.25063833023
+match = -2.9%%
+title = Chiếu điều hòa cao su non nhập khẩu nguyên chiếc (tặng ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-nhập-khẩu-nguyên-chiếc-(tặng-kèm-2-vỏ-gối)-i.14181335.2002294679
 
 [foreverbedding.net]
 match = 32.4%%
@@ -97,7 +97,7 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.lazada.vn]
-match = 2.9%%
-title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
-url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
+match = -5.9%%
+title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
 
