--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-16 05:33:55
+lastsearch = 2024-07-16 05:46:04
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmOCu30K&sig=ACfU3U3UNZYwVGcAaGEM9ZswYkU_djpChA&hl=en&sa=X&ved=2ahUKEwj83cmYjaqHAxUEjYkEHbGTDH0Q6AF6BAg2EAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmfk72jV&sig=ACfU3U34emRL-Obf5vC_sxY5uMM0qVBvJQ&hl=en&sa=X&ved=2ahUKEwjK15v0j6qHAxVSHzQIHW-IBpUQ6AF6BAgtEAM
 
 [tax.vermont.gov]
 match = -29.4%%
