--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-16 00:50:41
+lastsearch = 2024-07-16 05:51:45
 
 [thefelix.vn]
 match = -50.0%%
@@ -27,9 +27,9 @@ title = Nệm Cao Su Thiên Nhiên Felix Premium Comfort - Êm
 url = https://shopee.vn/Nệm-Cao-Su-Thiên-Nhiên-Felix-Premium-Comfort-Êm-Không-Xẹp-Lún-Giá-Rẻ-Cho-Mọi-Nhà-i.331643117.12735521022
 
 [dienmaylocduc.vn]
-match = 34.2%%
-title = BẢNG GIÁ NỆM CAO SU THIÊN NHIÊN FELIX COMFORT
-url = https://dienmaylocduc.vn/m/bang-gia-nem-cao-su-thien-nhien-felix-comfort-2023-283519
+match = -10.5%%
+title = Nệm | 🔧 bảo hành chính hãng, 🚛 miễn phí vận chuyển HCM ; 🌏 ...
+url = https://dienmaylocduc.vn/san-pham/nem-lien-a-1117-0?page=5
 
 [bsa.org.vn]
 match = 57.1%%
@@ -67,9 +67,9 @@ title = [GIÁ ĐỆM 2024] Nệm cao su thiên nhiên ...
 url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 
 [www.lazada.vn]
-match = 5.3%%
-title = Nệm cao su thiên nhiên Felix Comfort - Độ cứng tiêu chuẩn ...
-url = https://www.lazada.vn/products/nem-cao-su-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-15cm-i2294959349-s11133506275.html
+match = 13.2%%
+title = Nệm cao su 100%% thiên nhiên - Felix Comfort - độ cứng ...
+url = https://www.lazada.vn/products/nem-cao-su-100-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-nang-do-co-the-thoang-khi-toi-uu-i2295048242.html
 
 [nemcaosuthangloi.vn]
 match = 18.2%%
