CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-16 02:26:16
+lastsearch = 2024-07-16 06:16:40
 
 [zhangbrickshop.com]
 match = -133.3
@@ -340,4 +340,9 @@ url = https://hcdc.vn/hoidap/index/chitiet/b5f73d288ea96f141a64c180a6ed9be3
 match = -240.0%%
 title = Một con lắc lò xo thẳng đứng gồm vật nặng khối lượng m ...
 url = https://tuyensinh247.com/bai-tap-87566.html
+
+[www.tripadvisor.com.vn]
+match = -213.3%%
+title = Kiwooza Planet D2 (Thiso Mall Thu Thiem) - Tripadvisor
+url = https://www.tripadvisor.com.vn/Attraction_Review-g293925-d26856619-Reviews-Kiwooza_Planet_D2_Thiso_Mall_Thu_Thiem-Ho_Chi_Minh_City.html
 
