--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-15 23:42:23
+lastsearch = 2024-07-16 06:14:41
 
 [demxanh.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [chieutrucsaigon.com]
-match = -26.1%%
-title = ĐỊA CHỈ MUA CHIẾU TRÚC TIN CẬY TĨNH LONG AN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/dia-chi-mua-chieu-truc-tin-cay-tinh-long-an-55.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [khodem.vn]
 match = -56.5%%
