--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-15 23:42:34
+lastsearch = 2024-07-16 06:13:41
 
 [www.youtube.com]
-match = -142.1%%
-title = Cách nhân giống mộc hương bằng cành dễ nhất cho người ...
-url = https://www.youtube.com/watch?v=0Ww7ZbVfyBY
+match = -121.1%%
+title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
+url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
 
 [trangtrisanvuon.vn]
 match = -147.4%%
