--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-16 05:51:45
+lastsearch = 2024-07-16 06:14:20
 
 [thefelix.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 13.3%%
-title = Felix - Nệm cao su thiên nhiên
-url = https://www.facebook.com/thefelix.vn/posts/nệm-cao-cấp-giá-xưởngnệm-cao-su-thiên-nhiên-felix-hàng-việt-nam-chất-lượng-cao-n/722093250081830/
+match = 31.6%%
+title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
+url = https://www.facebook.com/thefelix.vn/
 
 [shopee.vn]
 match = 36.8%%
@@ -27,9 +27,9 @@ title = Nệm Cao Su Thiên Nhiên Felix Premium Comfort - Êm
 url = https://shopee.vn/Nệm-Cao-Su-Thiên-Nhiên-Felix-Premium-Comfort-Êm-Không-Xẹp-Lún-Giá-Rẻ-Cho-Mọi-Nhà-i.331643117.12735521022
 
 [dienmaylocduc.vn]
-match = -10.5%%
-title = Nệm | 🔧 bảo hành chính hãng, 🚛 miễn phí vận chuyển HCM ; 🌏 ...
-url = https://dienmaylocduc.vn/san-pham/nem-lien-a-1117-0?page=5
+match = 34.2%%
+title = BẢNG GIÁ NỆM CAO SU THIÊN NHIÊN FELIX COMFORT
+url = https://dienmaylocduc.vn/m/bang-gia-nem-cao-su-thien-nhien-felix-comfort-2023-283519
 
 [bsa.org.vn]
 match = 57.1%%
