--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-16 05:44:49
+lastsearch = 2024-07-16 06:20:13
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -152,9 +152,9 @@ title = BE 58-4.tif
 url = https://www.dot.ny.gov/main/business-center/designbuildproject40/repository/BE_58-4 (SPAN 1-43) -Orig Constr As-Builts_Part2.pdf
 
 [interchange.puc.texas.gov]
-match = -95.2%%
-title = 49243 1E11 Eli Item Number: 7 Addendum StartPage: 0
-url = https://interchange.puc.texas.gov/Documents/49243_7_1011904.PDF
+match = 0.0%%
+title = Appendix C Published Notices
+url = https://interchange.puc.texas.gov/Documents/47416_54_955702.PDF
 
 [adsabs.harvard.edu]
 match = -123.8%%
@@ -275,4 +275,14 @@ url = https://petalumadocs.cityofpetaluma.net/WebLink/DocView.aspx?id=378433&dbi
 match = -104.8%%
 title = 1998-11-03 - IIS Windows Server - City of Encinitas
 url = https://archive.encinitasca.gov/WebLink/DocView.aspx?id=620107&dbid=0&repo=CityofEncinitas
+
+[file.lacounty.gov]
+match = -66.7%%
+title = Board Letter - ADOPTED - COUNTY OF LOS ANGELES
+url = https://file.lacounty.gov/SDSInter/bos/supdocs/179027.pdf
+
+[www.trsil.org]
+match = -119.0%%
+title = Fiscal Year 1995 Comprehensive Annual Financial Report
+url = https://www.trsil.org/sites/default/files/documents/CAFR-FY1995 OCR.pdf
 
