CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-16 05:36:08
+lastsearch = 2024-07-16 08:04:54
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -212.5%%
-title = Đại doàn kết - Issues 9-29 - Page 20 - Google Books Result
-url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA4-PA20&lpg=RA4-PA20&dq=chieu+lac+soc+16&source=bl&ots=fHS2J0Pupf&sig=ACfU3U0nbtUWzT12sCul_tTVYhAIK8_hZA&hl=en&sa=X&ved=2ahUKEwjdlvLXjaqHAxUEtokEHRVzBXwQ6AF6BAgbEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EcG6BC2&sig=ACfU3U0577XtNQJxh9omR10GEuuO83XV_Q&hl=en&sa=X&ved=2ahUKEwjSjoX4rqqHAxVkKEQIHVEoDX0Q6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
