--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-16 04:34:14
+lastsearch = 2024-07-16 07:58:39
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -385,4 +385,9 @@ url = https://guides.sll.texas.gov/property-owners-associations/ccrs
 match = -111.8%%
 title = Official Website of the Joint Chiefs of Staff
 url = https://www.jcs.mil/
+
+[www.providentlawyers.com]
+match = 0.0%%
+title = 
+url = https://www.providentlawyers.com/5-new-arizona-laws-that-affect-owners-and-residents-of-hoa-communities/
 
