--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-16 06:18:59
+lastsearch = 2024-07-16 08:03:35
 
 [www.gov.uk]
 match = -200.0%%
@@ -807,8 +807,8 @@ title = 16Personalities: Free personality test, type descriptions ...
 url = https://www.16personalities.com/
 
 [humane.com]
-match = -60.0%%
-title = Ai Pin - Wearable Ai | Humane
+match = -33.3%%
+title = Humane: Ai Pin - Wearable Ai
 url = https://humane.com/
 
 [www.wrdw.com]
@@ -870,4 +870,24 @@ url = https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd
 match = -53.3%%
 title = Welcome to Costco Wholesale
 url = https://www.costco.com/
+
+[aws.amazon.com]
+match = -46.7%%
+title = Command Line Interface - AWS CLI
+url = https://aws.amazon.com/cli/
+
+[www.disney.com]
+match = -180.0%%
+title = Disney.com | The official home for all things Disney
+url = https://www.disney.com/
+
+[www.ihg.com]
+match = -106.7%%
+title = InterContinental® Hotels & Resorts
+url = https://www.ihg.com/intercontinental/hotels/us/en/reservation
+
+[www.bloomberg.com]
+match = -186.7%%
+title = Bloomberg - Business News, Stock Markets, Finance ...
+url = https://www.bloomberg.com/
 
