--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-16 05:14:11
+lastsearch = 2024-07-16 09:07:30
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = -233.3%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -333.3%%
-title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
+match = -208.3%%
+title = TUI Fly Belgium 737 flying in North America?
 url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
@@ -330,4 +330,9 @@ url = https://www.travelandtourworld.com/news/article/tui-airways-new-routes-inc
 match = -100.0%%
 title = Dior official website | DIOR
 url = https://www.dior.com/
+
+[shipsmonthly.com]
+match = -275.0%%
+title = TUI Cruises' Eighth Newbuild Named Mein Schiff Relax
+url = https://shipsmonthly.com/news/tui-cruises-eighth-newbuild-named-mein-schiff-relax/
 
