--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-16 06:29:33
+lastsearch = 2024-07-16 09:07:39
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -87.5%%
-title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPTZ30Yy&sig=ACfU3U0Qpcs67uc-KJOj6Ry-WtrBFejcEA&hl=en&sa=X&ved=2ahUKEwjRuZDQmaqHAxUZJEQIHWjwBngQ6AF6BAgVEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabyV7lxg&sig=ACfU3U3h_RcSp_o7WyLkEPWizdUpM3j2-w&hl=en&sa=X&ved=2ahUKEwiB9qn7vKqHAxWvhYkEHQHLDHwQ6AF6BAgaEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
