--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-16 05:38:44
+lastsearch = 2024-07-16 09:03:52
 
 [demxanh.com]
 match = -41.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -105.9%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
+match = -129.4%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [www.lazada.vn]
 match = -152.9%%
