--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-16 03:27:34
+lastsearch = 2024-07-16 09:12:18
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Thảm giường bo đê 15
-url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
+match = 10.0%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [shopee.vn]
 match = -105.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -75.0%%
-title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
-url = https://noithattana.vn/giuong-ngu/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
