--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-16 07:59:33
+lastsearch = 2024-07-16 09:12:07
 
 [www.tiktok.com]
-match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [digitalmaine.com]
 match = -75.0%%
@@ -32,9 +32,9 @@ title = Nhu shop | Binh Dinh
 url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 
 [www.diepxuan.com]
-match = -150.0%%
-title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-bong.html?p=2
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
