CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-16 08:04:54
+lastsearch = 2024-07-16 09:45:35
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -127,9 +127,9 @@ title = Nghịch lý Lukaku - Thể thao
 url = https://znews.vn/nghich-ly-lukaku-post1483431.html
 
 [vtcnews.vn]
-match = -200.0%%
-title = Con gái út của Quyền Linh: Nhan sắc thăng hạng ở tuổi 16 ...
-url = https://vtcnews.vn/con-gai-ut-cua-quyen-linh-nhan-sac-thang-hang-o-tuoi-16-gu-thoi-trang-ca-tinh-ar882366.html
+match = -193.8%%
+title = Dự báo thời tiết TP.HCM ngày 16/7: Mưa dông về chiều ...
+url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-16-7-mua-dong-ve-chieu-nhiet-do-giam-ar883459.html
 
 [vietstock.vn]
 match = -212.5%%
@@ -257,9 +257,9 @@ title = Câu lạc bộ bóng bàn Ái Liên (Tam Kỳ): Từ “đường phố
 url = https://baoquangnam.vn/cau-lac-bo-bong-ban-ai-lien-tam-ky-tu-duong-pho-den-san-choi-toan-quoc-3137646.html
 
 [thoibaotaichinhvietnam.vn]
-match = -225.0%%
-title = Triển khai giai đoạn II/2024 chiến dịch Twin Guardian về ...
-url = https://thoibaotaichinhvietnam.vn/trien-khai-giai-doan-ii2024-chien-dich-twin-guardian-ve-hop-tac-dau-tranh-voi-ma-tuy-153614.html
+match = -206.2%%
+title = Ngày 16/7: Giá heo hơi tiếp đà giảm ở cả 3 miền, thịt ...
+url = https://thoibaotaichinhvietnam.vn/ngay-167-gia-heo-hoi-tiep-da-giam-o-ca-3-mien-thit-heo-gia-on-dinh-155032.html
 
 [nhandan.vn]
 match = -31.2%%
@@ -465,4 +465,9 @@ url = https://baoangiang.com.vn/be-mac-hoi-nghi-lan-thu-16-ban-chap-hanh-dang-bo
 match = -175.0%%
 title = Vẹn nguyên ký ức của những thanh niên xung phong ...
 url = https://www.baosoctrang.org.vn/chinh-tri/ven-nguyen-ky-uc-cua-nhung-thanh-nien-xung-phong-cong-hien-tuoi-xuan-cho-dat-nuoc-74736.html
+
+[24hmoney.vn]
+match = -218.8%%
+title = [VIDEO] VN-Index 16/07/2024: Dòng tiền lớn đang đi vào ...
+url = https://24hmoney.vn/news/video-vn-index-16-07-2024-dong-tien-lon-dang-di-vao-co-phieu-thanh-khoan-cang-thap-ki-luc-cang-de-len-c30a2331789.html
 
