--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-16 08:01:22
+lastsearch = 2024-07-16 09:50:46
 
 [demxanh.com]
 match = -4.5%%
@@ -13,8 +13,8 @@ url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 5
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
+title = Thảm ghế thảm giường - Trang 4
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [decoviet.vn]
 match = 22.2%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 45.5%%
+title = Điệp Xuân Thảm giường nỉ 140x190
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.lazada.vn]
 match = -77.3%%
@@ -52,9 +52,9 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -59.1%%
-title = Thảm trải chân giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải chân giường
+match = -90.9%%
+title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
+url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
 
 [cafeland.vn]
 match = -45.5%%
