--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-16 03:45:47
+lastsearch = 2024-07-16 09:50:22
 
 [burningman.org]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = 0.0%%
-title = Primitive Technology
-url = https://www.youtube.com/channel/UCAL3JXZSzSm8AlZyD3nQdBA
+match = -66.7%%
+title = OLLIE 1- POINT TO THE TABLE- TRANG 10
+url = https://www.youtube.com/watch?v=2YbcRGD-gIg
 
 [www.hcso.org]
 match = 7.7%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appjqsYgH7155
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
 
 [register.fca.org.uk]
 match = -6.7%%
