--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-16 08:04:41
+lastsearch = 2024-07-16 10:19:43
 
 [everon.online]
 match = -12.0%%
@@ -153,8 +153,8 @@ url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-ch
 
 [m.facebook.com]
 match = -44.0%%
-title = E có hai giường này m6.2m muốn thanh lý 2triệu /2c
-url = https://m.facebook.com/groups/802016720598564/posts/1637312533735641/
+title = Em có căn hộ 3PN-2WC ở tòa Goldmark City ( ...
+url = https://m.facebook.com/groups/113376572654593/posts/1439434073382163/
 
 [dantri.com.vn]
 match = -60.0%%
