--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-16 08:01:11
+lastsearch = 2024-07-16 10:40:46
 
 [shopee.vn]
-match = -21.4%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = 39.3%%
+title = Chiếu Điều Hòa Lụa Thông Khí Mát Rượi ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Thông-Khí-Mát-Rượi-Chiếu-Điều-Hòa-Sợi-Mây-Cao-Cấp-loại-đep-.-i.594187438.16425215901
 
 [chieutrelanlan.com]
 match = 19.0%%
