CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-16 09:07:39
+lastsearch = 2024-07-16 10:47:05
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -225.0%%
-title = Hina Quỳnh Như liên tục mukbang trên xe hơi khiến cđm quay ...
-url = https://www.facebook.com/TheFaceVietnamOfficial/videos/hina-quỳnh-như-liên-tục-mukbang-trên-xe-hơi-khiến-cđm-quay-xe-quỳnh-trương-chỉ-ở/368458209680256/
+match = -68.8%%
+title = ANTT thị xã Vĩnh Châu | Vinh Chau
+url = https://www.facebook.com/antttxvc/?locale=vi_VN
 
 [www.cgv.vn]
 match = -143.8%%
