--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-16 09:09:36
+lastsearch = 2024-07-16 10:52:49
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -125,4 +125,34 @@ url = https://www.innovatemenudesign.com/products/nwalliry-53/
 match = -131.2%%
 title = tui warmdream 16 - Flying TUI Dreamliner - htk684.com
 url = https://htk684.com/products/lrrxzabx-255/
+
+[www.tui.co.uk]
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/destinations/info/dreamliner
+
+[www.vftt.org]
+match = -112.5%%
+title = Cold weather sleeping bag | Page 2 - vftt
+url = https://www.vftt.org/threads/cold-weather-sleeping-bag.9580/post-106871
+
+[groups.google.com]
+match = -31.2%%
+title = North Face VE-23 problems
+url = https://groups.google.com/g/rec.backcountry/c/DuDe5tTANqk
+
+[maryandcrew.com]
+match = -131.2%%
+title = Fall New England Capsule Wardrobe - Mary&Crew
+url = https://maryandcrew.com/fall-new-england-capsule-wardrobe/
+
+[www.youtube.com]
+match = -81.2%%
+title = $500 Autumn Fashion Nova Haul 2023 🍂
+url = https://www.youtube.com/watch?v=YRHyjpNvXS8
+
+[www.basschat.co.uk]
+match = -162.5%%
+title = Greetings to All from Lovely Warm Las Vegas, NV USA
+url = https://www.basschat.co.uk/topic/81322-greetings-to-all-from-lovely-warm-las-vegas-nv-usa/
 
