--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-16 09:50:46
+lastsearch = 2024-07-16 10:44:32
 
 [demxanh.com]
 match = -4.5%%
@@ -52,9 +52,9 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -90.9%%
-title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
-url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
+match = -59.1%%
+title = Thảm trải chân giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải chân giường
 
 [cafeland.vn]
 match = -45.5%%
