--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-16 01:37:58
+lastsearch = 2024-07-16 10:51:57
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Louise Laurent
+url = https://profiles.ucsd.edu/louise.laurent
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Nicholas Butowski, MD
-url = https://profiles.ucsf.edu/nicholas.butowski
+match = 0.0%%
+title = Youngho Seo, PhD
+url = https://profiles.ucsf.edu/youngho.seo
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10984 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12378/PLEADINGS/1237807262380000000046.pdf
+title = Case 23-10990 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12381/PLEADINGS/1238107262380000000053.pdf
 
 [www.west-cs.com]
 match = -100.0%%
@@ -212,9 +212,9 @@ title = Table of contents
 url = https://ieeexplore.ieee.org/iel7/6648471/6658393/06658395.pdf
 
 [medschool.uci.edu]
-match = -38.5%%
-title = Jaime Landman
-url = https://medschool.uci.edu/about/faculty/landmanj
+match = -30.8%%
+title = Alpesh N Amin
+url = https://medschool.uci.edu/about/faculty/anamin
 
 [floridapsc.com]
 match = -137.5%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = 0.0%%
-title = Merrill E Gershwin
-url = https://profiles.ucdavis.edu/merrill.gershwin
+match = -38.5%%
+title = R Lor Randall
+url = https://profiles.ucdavis.edu/r.randall
 
 [store.samhsa.gov]
 match = -60.0%%
