CI images update

--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-16 04:14:29
+lastsearch = 2024-07-16 11:32:45
 
 [tiki.vn]
 match = -138.9%%
@@ -43,8 +43,8 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
 match = -61.1%%
-title = Bộ ga phủ Melody M214 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-melody-m214
+title = Bộ ga phủ Common C119 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c119
 
 [aeoneshop.com]
 match = -105.6%%
