--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-16 07:59:44
+lastsearch = 2024-07-16 11:37:26
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -26.5%%
-title = Bộ chăn ga Everon ESB - 23021 hứa hẹn sẽ là best seller ...
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-23021-pd.html
+match = -8.8%%
+title = Bộ chăn ga Everon EPM-22060 tone màu ghi đậm và nhạt
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epm-22060-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -78,8 +78,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22031 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22031.html
+title = Everon ESM-22014 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esm22014.html
 
 [demxanh.com]
 match = -2.9%%
