--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-16 10:51:35
+lastsearch = 2024-07-16 11:34:12
 
 [shopee.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
 
 [www.lazada.vn]
-match = -22.2%%
-title = Chăn Nhung 4kg Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-nhung-4kg/
+match = 7.4%%
+title = Mền Lông Tuyết Thái Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
 match = -18.5%%
@@ -230,4 +230,9 @@ url = https://haiquanonline.com.vn/suc-hut-rieng-co-cua-cac-dao-du-lich-sinh-tha
 match = -63.0%%
 title = Dự đoán tỉ số Euro 2024: Hà Lan đủ sức thắng Anh trong ...
 url = https://baolongan.vn/du-doan-ti-so-euro-2024-ha-lan-du-suc-thang-anh-trong-90-phut-a179031.html
+
+[www.instagram.com]
+match = -144.4%%
+title = Instagram
+url = https://www.instagram.com/hluv202/reel/C9RWvnSSmVn/
 
