--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-16 05:12:48
+lastsearch = 2024-07-16 11:40:14
 
 [demxanh.com]
-match = 3.4%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+match = -20.7%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023 - Đệm Xanh
 url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
@@ -37,8 +37,8 @@ title = Chiếu điều hòa cao su non - Kho đệm
 url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.diepxuan.com]
-match = 65.5%%
-title = Điệp Xuân Chiếu điều hòa cao su 150x190
+match = 58.6%%
+title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
