--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-16 10:36:01
+lastsearch = 2024-07-16 11:39:52
 
 [agasound.vn]
 match = 6.7%%
@@ -72,9 +72,9 @@ title = Tổng hợp 12 mạch điện điều khiển động cơ cơ bản
 url = https://www.thietbidiencongnghiep.com.vn/bai-viet/tong-hop-12-mach-dieu-khien-co-ban/
 
 [geniustools.vn]
-match = -186.7%%
-title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
-url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
+match = -66.7%%
+title = Đầu lắc léo 3/8" hệ inch 12 cạnh
+url = http://geniustools.vn/khau-564/dau-lac-leo-3-8-he-inch-12-canh-757
 
 [dochoimamnon123.com]
 match = -240.0%%
