--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-16 10:19:11
+lastsearch = 2024-07-16 11:32:23
 
 [www.tiktok.com]
 match = -152.9%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -194.1%%
 title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5wxIG6-&sig=ACfU3U17TrdmTeMvcoG-sR-2hzN6jkzCwA&hl=en&sa=X&ved=2ahUKEwjd2Yv6zKqHAxWaD1kFHebTDCwQ6AF6BAglEAM
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5xoDA51&sig=ACfU3U059Fkb9QFcxVGLAyR6g0Ty0ufJgA&hl=en&sa=X&ved=2ahUKEwjmt6mo3aqHAxX_FlkFHT_-CSkQ6AF6BAglEAM
 
 [tax.vermont.gov]
 match = -29.4%%
