--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-16 09:45:14
+lastsearch = 2024-07-16 11:37:08
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -135.0%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.akc.org]
 match = -45.0%%
@@ -337,9 +337,9 @@ title = Ratios Cedears
 url = https://www.gabrielmartin.yt/tools/ratio
 
 [www.nti.org]
-match = -15.0%%
-title = North Korea Chemical Overview
-url = https://www.nti.org/analysis/articles/north-korea-chemical/
+match = -25.0%%
+title = North Korea Chemical Facilities
+url = https://www.nti.org/analysis/articles/north-korea-chemical-facilities/
 
 [10mag.com]
 match = 0.0%%
