--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-16 10:19:43
+lastsearch = 2024-07-16 11:46:48
 
 [everon.online]
 match = -12.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -44.0%%
-title = Em có căn hộ 3PN-2WC ở tòa Goldmark City ( ...
-url = https://m.facebook.com/groups/113376572654593/posts/1439434073382163/
+match = -8.0%%
+title = SÀN GIAO DỊCH BẤT ĐỘNG SẢN THANH ...
+url = https://m.facebook.com/groups/muabannhadathanoi247/posts/8021310421296679/
 
 [dantri.com.vn]
 match = -60.0%%
