--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-16 11:32:45
+lastsearch = 2024-07-16 11:46:36
 
 [tiki.vn]
 match = -138.9%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -105.6%%
-title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
+match = -150.0%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 739 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-739-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -97,9 +97,9 @@ title = Bộ Phủ L'amour Living LV10
 url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
-match = -66.7%%
-title = Bộ Drap & Chăn Chần Cotton 160x200 (5 Món)...
-url = https://leflair.com/en/shop/bo-drap-chan-chan-cotton-160x200-5-mon-15916
+match = -61.1%%
+title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
+url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
 
 [ninhouse.vn]
 match = -161.1%%
