--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-16 11:37:48
+lastsearch = 2024-07-16 11:46:25
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -20.0%%
-title = Bóng Bulb HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-bulb-htlight
+match = -40.0%%
+title = Đèn nhà xưởng HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-nha-xuong-htlight
 
 [www.htlightlevel.vn]
 match = -206.7%%
