--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-16 09:48:32
+lastsearch = 2024-07-16 11:52:03
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
@@ -480,4 +480,14 @@ url = https://www.georgiarestareas.com/
 match = -300.0%%
 title = Highly mobile twin boundaries in seven-layer modulated Ni ...
 url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
+
+[www.cvlga.org]
+match = -138.5%%
+title = Chattahoochee Valley Libraries: Home
+url = https://www.cvlga.org/
+
+[www.ers.usda.gov]
+match = 0.0%%
+title = Farm Labor
+url = https://www.ers.usda.gov/topics/farm-economy/farm-labor/
 
