--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-16 10:46:22
+lastsearch = 2024-07-16 11:45:53
 
 [demxanh.com]
 match = -41.2%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/tham-trai-san-bali.html
 [tiki.vn]
 match = -105.9%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=71118855/
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
 
 [www.lazada.vn]
 match = -135.3%%
@@ -22,9 +22,9 @@ title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
 url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -129.4%%
-title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
+match = -152.9%%
+title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
 
 [sammas.vn]
 match = -105.9%%
@@ -32,9 +32,9 @@ title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
 url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
 
 [shopee.vn]
-match = -235.3%%
-title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách phòng ngủ
-url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
+match = -200.0%%
+title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
 
 [vn.my-best.com]
 match = -176.5%%
@@ -60,4 +60,9 @@ url = https://www.youtube.com/watch?v=PPb0OZP6sk4
 match = -70.6%%
 title = dirk_wah | #Bali #Ubud #Reisfeld ...
 url = https://www.instagram.com/p/BIW1CtOD0XO/
+
+[thamachau.vn]
+match = -205.9%%
+title = Những thông số kích thước thảm trải sàn thường dùng cho ...
+url = http://thamachau.vn/nhung-thong-so-kich-thuoc-tham-trai-san-thuong-dung
 
