--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-16 09:45:46
+lastsearch = 2024-07-16 11:52:43
 
 [www.youtube.com]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
 url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -63.0%%
-title = Cách chặn, bỏ chặn Facebook trên điện thoại, máy tính ...
-url = https://www.thegioididong.com/hoi-dap/huong-dan-chan-va-huy-chan-tai-khoan-facebook-1037037
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -40.7%%
-title = Làm sao để biết ai đó đang chặn số điện thoại của bạn?
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/lam-sao-de-biet-ai-do-dang-chan-so-dien-thoai-cua-ban
+match = -51.9%%
+title = Cách hủy chặn cuộc gọi trên điện thoại đơn giản, nhanh ...
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/chi-tiet-cach-huy-chan-cuoc-goi-tren-dien-thoai-don-gian-nhanh-chong
 
 [metruyen.me]
 match = 33.3%%
