CI images update

--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-16 10:35:39
+lastsearch = 2024-07-16 12:17:02
 
 [www.instagram.com]
 match = -144.4%%
@@ -170,4 +170,14 @@ url = https://www.vicemhatien.com.vn/Upload/files/bctc2019_ctm.pdf
 match = -1700.0%%
 title = l
 url = https://www.dongthapbmc.vn/uploads/downloadIR.aspx?a=162830
+
+[www.museum.ru]
+match = -83.3%%
+title = {lixhf} New england patriots debit card
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=https://xn--93-6kc3bfr2e.xn--p1ai/FhSJG2ufe43vo
+
+[hoctap24h.vn]
+match = -77.8%%
+title = BO GIAO DUC VA OAO TAO - Hoctap24h.vn
+url = https://hoctap24h.vn/wp-content/uploads/2018/04/Vật-Lí-10-Nâng-Cao.pdf
 
