--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-16 05:37:12
+lastsearch = 2024-07-16 12:20:20
 
 [changagoidemsonghong.com]
-match = 4.2%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -12.5%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -92,9 +92,9 @@ title = Mẫu 16 - Chăn Ga Gối Đệm Benlinda Hải Phòng
 url = https://changagoibenlinda.com/mau-16
 
 [bochangagoi.vn]
-match = -70.8%%
-title = Bộ chăn ga gối OZ Bedding - Top 5 mẫu chăn ga gối cao cấp ...
-url = https://bochangagoi.vn/
+match = 25.0%%
+title = Chăn ga gối HQ22
+url = https://bochangagoi.vn/bo-chan-ga-goi-hq22/
 
 [ninhouse.vn]
 match = -75.0%%
@@ -122,9 +122,9 @@ title = Bộ chăn ga gối đệm giá rẻ đẹp nhất 2024 hiện nay
 url = https://changagoidem.co/
 
 [gagoinem.com]
-match = 8.3%%
-title = Bộ Ga Gối Thun Lạnh Hàn Quốc – M16
-url = https://gagoinem.com/danh-muc-san-pham/bo-ga-goi-thun-lanh-han-quoc-m16/
+match = -79.2%%
+title = Chăn Ga Gối Giá Rẻ Số 1 tại Hồ Chí Minh và trên toàn quốc
+url = https://gagoinem.com/chan-ga-goi-gia-re-tai-ho-chi-minh/
 
 [dodungnoithat.vn]
 match = -58.3%%
