--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-16 05:32:04
+lastsearch = 2024-07-16 12:17:13
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -157,8 +157,8 @@ title = Cedar Rapids Public Library: Home
 url = https://www.crlibrary.org/
 
 [academic.oup.com]
-match = 0.0%%
-title = 
+match = -330.0%%
+title = 12 Acupuncture Points on the Eight Extra Channels
 url = https://academic.oup.com/book/24392/chapter/187344854
 
 [www.rebalancetcm.com]
