--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-16 11:51:52
+lastsearch = 2024-07-16 12:19:06
 
 [shopee.vn]
-match = 48.0%%
-title = Màn chụp tự bung đỉnh vuông Kiều Phi
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mùng-chụp-bung-ngủ-người-lớn-gấp-gọn-tiện-dụng-1m6-1m8-2m2-cao-cấp-i.17452334.2227718270
+match = -8.0%%
+title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [munghoangphat.com]
 match = 48.0%%
