CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-16 06:31:13
+lastsearch = 2024-07-16 12:38:48
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -69.6%%
-title = The International Relations of the Chineese Empire
-url = https://books.google.com/books?id=uV4dFxHP2ioC&pg=PT1&lpg=PT1&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TMtX_xU4EQ&sig=ACfU3U3Vb2k0SaRBJjRBAszDCHVswkaUVQ&hl=en&sa=X&ved=2ahUKEwjhkKm17qmHAxUlFjQIHQJUAzIQ6AF6BAgiEAM
+match = -126.1%%
+title = Wars That Changed History: 50 of the World's Greatest Conflicts
+url = https://books.google.com/books?id=ehbHEAAAQBAJ&pg=PA530&lpg=PA530&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TgbDL0SWoo&sig=ACfU3U166WUtdT7jNW61cGZtK9qQQGjODQ&hl=en&sa=X&ved=2ahUKEwjO6syU7KqHAxWNLFkFHe1mBioQ6AF6BAgnEAM
 
 [www.travelweekly.com]
 match = -87.0%%
