--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-16 11:32:23
+lastsearch = 2024-07-16 12:34:35
 
 [www.tiktok.com]
-match = -152.9%%
-title = HOA Tries Entering my House: Breaking News and HOA ...
-url = https://www.tiktok.com/@koltindarley/video/7373712439390637354?lang=en
+match = -111.8%%
+title = HOA fined me for this #hoa | hoa doorbell camera
+url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
 
 [casetext.com]
 match = -100.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5xoDA51&sig=ACfU3U059Fkb9QFcxVGLAyR6g0Ty0ufJgA&hl=en&sa=X&ved=2ahUKEwjmt6mo3aqHAxX_FlkFHT_-CSkQ6AF6BAglEAM
+match = -17.6%%
+title = The Bankers Encyclopedia
+url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYLeEVVmW&sig=ACfU3U0xrCn64F1Fg-4FJ0rZCPRXlKoAFA&hl=en&sa=X&ved=2ahUKEwjkx9mb66qHAxW7MmIAHeBBBCwQ6AF6BAgoEAM
 
 [tax.vermont.gov]
 match = -29.4%%
