--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-16 10:21:26
+lastsearch = 2024-07-16 12:32:35
 
 [www.lazada.vn]
 match = -88.9%%
@@ -22,14 +22,14 @@ title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -116.7%%
+title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -27.8%%
+title = Siêu Thị Nệm | Ho Chi Minh City
+url = https://www.facebook.com/sieuthinem/
 
 [eva.vn]
 match = -150.0%%
@@ -57,8 +57,8 @@ title = Nem rán - Nguyên Hồng. Quán ở địa chỉ số nhà 32, ngõ 47 
 url = https://www.instagram.com/p/B98SA5ZJN5V/
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -55.6%%
+title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
