CI images update

--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-16 12:33:08
+lastsearch = 2024-07-16 12:45:36
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -184.6%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
 match = -176.9%%
@@ -177,8 +177,8 @@ title = Events | Center for Language, Interaction, and Culture - UCLA
 url = https://clic.ss.ucla.edu/speakers/
 
 [med.uc.edu]
-match = -284.6%%
-title = James P. Herman, PHD - College of Medicine | UC Cincinnati
+match = -184.6%%
+title = James P. Herman, PHD - UC College of Medicine
 url = https://med.uc.edu/about/depart-chairs/faculty-profile/Index/Pubs/hermanjs
 
 [heds-center.llnl.gov]
@@ -340,4 +340,9 @@ url = https://www.facebook.com/groups/660136824030557/posts/photos-from-the-conf
 match = -238.5%%
 title = Georgia Code Title 16. Crimes and Offenses § 16-15-3
 url = https://codes.findlaw.com/ga/title-16-crimes-and-offenses/ga-code-sect-16-15-3/
+
+[www.shschools.org]
+match = -15.4%%
+title = SHP Alumni Athletes
+url = https://www.shschools.org/athletics/alumni-athletes-in-action
 
