CI images update

--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-16 12:48:42
+lastsearch = 2024-07-16 13:40:02
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjHLuk7&sig=ACfU3U0j9ksFaxO4fCwsXdiD-n5lGZrO7Q&hl=en&sa=X&ved=2ahUKEwiWlcOv7qqHAxWekokEHURrBnkQ6AF6BAgdEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjIFli7&sig=ACfU3U2RBsNn2g7RM1pVyygNBEiU9KzK4Q&hl=en&sa=X&ved=2ahUKEwibtp_s-aqHAxXbEFkFHfxvBy0Q6AF6BAgbEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = The Ren Men (@the_ren_men)
 url = https://www.instagram.com/the_ren_men/
 
 [www.youtube.com]
-match = 0.0%%
-title = 
-url = https://www.youtube.com/watch?v=cCApG8dOIs4
+match = -170.0%%
+title = Ren - 16 bar challenge *REACTION*
+url = https://www.youtube.com/watch?v=DN-xEHVEvtM
 
 [www.va.gov]
 match = -210.0%%
@@ -235,4 +235,9 @@ url = https://comick.io/comic/zhen-men-ren/NRAoK-chapter-16-en
 match = -210.0%%
 title = Mysterious Chinese Characters (16): Ren
 url = https://www.theepochtimes.com/article/mysterious-chinese-characters-ren-confucius-1525925
+
+[www.acufinder.com]
+match = 0.0%%
+title = 
+url = https://www.acufinder.com/Acupuncture+Points/Ren+16+(CO+16)/337
 
