--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-16 12:34:57
+lastsearch = 2024-07-16 13:39:08
 
 [tiki.vn]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Chăn Lông Cừu Đại Hàn Loại 1 dày nặng 2.5kg Siêu Ấm
 url = https://trandungmart.vn/chan-long-cuu-dai-han-loai-1-day-nang-2-5kg-sieu-am
 
 [lasantevn.com]
-match = -193.3%%
-title = Các loại chăn lông cừu: Sản phẩm nào được tin dùng nhất?
-url = https://lasantevn.com/cac-loai-chan-long-cuu/
+match = -200.0%%
+title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasante
+url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
 match = -86.7%%
