--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-16 11:44:48
+lastsearch = 2024-07-16 13:40:24
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -360,4 +360,9 @@ url = https://tokyocamera.vn/gimbal-cho-iphone-14-pro-max/
 match = -200.0%%
 title = “Du lịch cùng con” 14 khu vui chơi cho trẻ em tại Đà Lạt
 url = https://merperledalat.vn/tin-tuc/bai-viet/du-lich-cung-con-14-khu-vui-choi-cho-tre-em-tai-da-lat/
+
+[gachkhongnungminhnhan.com]
+match = -106.2%%
+title = Secured Home of gachkhongnungminhnhan.com
+url = https://gachkhongnungminhnhan.com/
 
