--- a/images/nem-diamold-tc-140x190x07/config.ini
+++ b/images/nem-diamold-tc-140x190x07/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-tc-140x190x07.html
 lastopen = 2024-06-10 11:58:28
 
 [search]
-lastsearch = 2024-07-16 08:01:00
+lastsearch = 2024-07-16 13:38:14
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -52,9 +52,9 @@ title = Here is transmission part numbers we all need | Page 3
 url = https://www.dsmtuners.com/threads/here-is-transmission-part-numbers-we-all-need.257119/page-3
 
 [groups.io]
-match = -24.0%%
-title = N1MMLoggerPlus@groups.io | Messages
-url = https://groups.io/g/N1MMLoggerPlus/messages?msgnum=54710
+match = 4.3%%
+title = N1MMLoggerPlus Messages
+url = https://groups.io/g/N1MMLoggerPlus/messages?msgnum=42892
 
 [www.mikepetrucci.com]
 match = -40.0%%
