--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-16 03:31:43
+lastsearch = 2024-07-16 13:40:15
 
 [www.cms.gov]
 match = 4.5%%
@@ -177,9 +177,9 @@ title = Farm houses for sale in new hampshire [mJROCi]
 url = https://www.nitrc.org/links/?group_id=51&url=https://4835712.detsad147vrn.ru/5487923u6fe43a
 
 [explore.omsystem.com]
-match = 0.0%%
-title = 
-url = https://explore.omsystem.com/us/en/omd
+match = -12.5%%
+title = TG-7 - OM System
+url = https://explore.omsystem.com/us/en/tg-7
 
 [www.sohoonline.org]
 match = -95.5%%
