CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-16 10:19:56
+lastsearch = 2024-07-16 13:46:45
 
 [shopee.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Tìm Hiểu Chiếu Điều Hòa giá Bao Nhiêu chất liệu thế nà
 url = https://3dthinking.vn/tim-hieu-chieu-dieu-hoa-gia-bao-nhieu-chat-lieu-the-nao/
 
 [www.youtube.com]
-match = -55.6%%
-title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
-url = https://www.youtube.com/watch?v=ccaTWASdw7I
+match = -44.4%%
+title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
+url = https://www.youtube.com/watch?v=OShfCNiOmA8
 
 [lybalansieucute.com]
 match = 33.3%%
