--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-16 05:47:53
+lastsearch = 2024-07-16 13:49:03
 
 [hanvico.com.vn]
-match = 28.6%%
-title = Bộ ga chun My Youth - MY18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
+match = 38.1%%
+title = Bộ ga chun LIVING - LV18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga chun chần mặt Velina V20 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v20
+match = -33.3%%
+title = Bộ ga chun Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -71.4%%
-title = Bộ 1 ga chun kèm 2 vỏ gối nằm poly m6 công chúa 3d
-url = https://shopee.vn/product/7593915/46205072
+match = -114.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -9.5%%
+title = Bộ chăn ga gối WaltDisney mã BY20002
+url = https://changagoidemsonghong.com/chan-ga-goi-by20002
 
 [demsonghonghanoi.com]
 match = -14.3%%
