--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-16 12:18:44
+lastsearch = 2024-07-16 13:46:01
 
 [screenrant.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://screenrant.com/use-green-screen-feature-youtube-shorts-how/
 
 [www.facebook.com]
-match = -235.7%%
-title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ...
-url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
+match = -264.3%%
+title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ...
+url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
 
 [www.youtube.com]
 match = -200.0%%
@@ -62,9 +62,9 @@ title = Singapore Green Plan 2030
 url = https://www.greenplan.gov.sg/
 
 [www.dienmayxanh.com]
-match = -264.3%%
-title = Top 10 tivi 65 inch giá rẻ dưới 15 triệu đáng sở hữu tại ...
-url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-smart-tivi-65-inch-dang-dau-tu-811887
+match = -242.9%%
+title = Top 10 tivi giá rẻ dưới 8 triệu đáng mua nhất 2024 tại ...
+url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-5-tivi-man-hinh-phang-duoi-4-trieu-881469
 
 [dienthoaivui.com.vn]
 match = -250.0%%
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
 match = -92.9%%
@@ -400,4 +400,9 @@ url = https://www.ebay.com/itm/395315782184
 match = 0.0%%
 title = 
 url = https://www.police1.com/chiefs-sheriffs/articles/incorporating-the-tenth-man-concept-into-critical-decision-making-TXuMkB74BZFN9LCo/
+
+[dienmaycholon.com]
+match = -250.0%%
+title = Mua điện thoại iPhone giá rẻ, nhiều ưu đãi, giao hàng nhanh
+url = https://dienmaycholon.com/dien-thoai-di-dong-apple
 
