--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-16 10:39:36
+lastsearch = 2024-07-16 13:47:29
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,14 +17,14 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -15.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp
+match = -115.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -160.0%%
